# zk-timeseries

./: Cargo.toml
crates/data-hash/: Cargo.toml
crates/data-hash/src/: main.rs
crates/lib-timeseries/: Cargo.toml
crates/lib-timeseries/src/: lib.rs
crates/moving-average/: Cargo.toml
crates/moving-average/src/: main.rs
crates/script/: Cargo.toml  build.rs
elf/: riscv32im-succinct-zkvm-data-hash-elf  riscv32im-succinct-zkvm-elf  riscv32im-succinct-zkvm-moving-average-elf
lib/: Cargo.toml
lib/src/: lib.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
