[package]
name = "lib-timeseries"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
primitive-types = "0.12.1"
serde = "1.0.182"
sha3 = "0.10.8"

[patch.crates-io]
sha3-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", branch = "patch-sha3-v0.10.8" }