[package]
version = "0.1.0"
name = "zk-timeseries-script"
edition = "2021"
default-run = "hash"

[[bin]]
name = "hash"
path = "src/bin/data-hash.rs"

[[bin]]
name = "ma"
path = "src/bin/moving-average.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[dependencies]
sp1-sdk = "2.0.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
lib-timeseries = { path = "../lib-timeseries" }

[build-dependencies]
sp1-helper = "2.0.0"
